welcome.lessons.welcome.bat.bool2.SortaSum.scala.error
sortaSum:2: error: '(' expected but identifier found.
  if a+b<=19 && a+b>=10
     ^